# MGLensing

./: .gitignore  .readthedocs.yaml  LICENSE  MGlens-spec-file.txt  README.md  WL_3x2pt_mcmc.py  compare_Cls_MGL-CCL-CosmoSIS.py  compute_Cell.py  compute_baryonic_boost.py  compute_power_spectra.py  config.yaml  output_test.txt  params.yaml  params_bacco_b1_test.yaml  params_bacco_fix.yaml  params_bacco_test.yaml  params_bacco_test_cosmo.yaml  params_data.yaml  params_model_hmcode.yaml  params_names.yaml  params_photoz_test.yaml  pyproject.toml  setup_and_priors.py  test.txt  test_mcmc_run.py  test_plot.py  test_plot_kernels.py  test_plot_posterior.py  test_postprocess_S8.py  test_run.py
MGL/: MGL.py  __init__.py  likelihood.py  powerspectra.py  specs.py  theory.py
MGLensing/: __init__.py  likelihood.py  powerspectra.py  specs.py  theory.py
MGLensing/structure/: bacco_interface.py  bcemu_interface.py  hmcode2020_interface.py  react_gamma_interface.py  react_ide_interface.py  react_musigma_interface.py  react_ndgp_interface.py
chains/: chain_bacco_baryons_wl.txt  chain_lsst_bacco_3x2pt_nobar_heft_test.txt  chain_lsst_y1_3x2pt_bacco_test_like.txt  chain_lsst_y1_3x2pt_hmcode_test.txt  chain_my_test.txt  chain_params_debug.txt  chain_params_debug_bacco.txt  chain_test_bacco_3x2pt_nobar_vary_Omm_and_b1.txt  chain_test_bacco_3x2pt_nobar_vary_Omm_and_b1L.txt  chain_test_bacco_3x2pt_nobar_vary_Omm_and_b1L_mock_heft.txt  chain_test_bacco_3x2pt_nobar_vary_Omm_and_b1_mock_heft.txt  chain_test_bacco_3x2pt_nobar_vary_Omm_and_h_mock_heft.txt  chain_test_bacco_3x2pt_nobar_vary_b1L_and_b2L_mock_heft.txt
chains/lsst/: chain_bacco_baryons_3x2pt.txt  chain_const_lmax_binned.txt  chain_const_lmax_binned_fixIA.txt  (+14 more)
docs/: api_like.rst  api_mgl.rst  api_specs.rst  api_theory.rst  conf.py  index.rst  requirements.txt
emulators/: Boost_MuSpline_fixcosmo_emu.pkl  Boost_nDGP_emu_v2.pkl  log10_nonu_matter_linear_emu.pkl  log10_nonu_matter_nonlinear_emu.pkl  log10_total_matter_linear_emu.pkl  log10_total_matter_nonlinear_emu.pkl  sigma8_emu.pkl
ini_files/: custom_survey.yaml  params.yaml  params_bacco_fix.yaml  params_hmcode_fix.yaml
plotting_scripts/: compare_Cls_MGL-CCL-CosmoSIS.py  compare_mgl_vs_ccl.py  compare_mgl_vs_ccl_cov.py  cosmosis_comparison.py  params_names.yaml  plot_c_ells.py  plot_likelihood_of_pars.py  plot_posterior.py  plot_power_spectrum.py  plot_tatt_terms.py  postprocess_compute_S8.py  recreate_cosmosis_cov_from_cls.py
(+5 files in other folders)
