[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MGL"
authors = [{name = "Maria Tsedrik", email = "mtsedrik@ed.ac.uk"},
{name = "Ottavia Truttero"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.11.0"
dependencies = ["numpy==1.23.5", "scipy==1.10.1", 
                "tensorflow == 2.12.0", "tensorflow-probability==0.21.0",  
                "pyyaml", "datetime", "MGrowth", "cosmopower==0.1.3", "sacc", 
                "baccoemu>=2.1.1", "BCemu==1.1.1",
                "fast-pt==3.2"]

[project.urls]
Home = "https://mglensing.readthedocs.io"

[tool.flit.sdist]
exclude = ["docs", ".gitignore", ".github", ".readthedocs.yaml"]

[tool.flit.module]
name = "MGLensing"